bloggin/templates/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bloggin-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bloggin-mysql
  template:
    metadata:
      labels:
        app: bloggin-mysql
    spec:
      containers:
      - name: bloggin-mysql
        image: mysql:latest
        ports:
        - containerPort: 3306
---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: bloggin-mysql
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 30083
    protocol: TCP
  type: NodePort
