bloggin/templates/php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin:latest
        ports:
        - containerPort: 80 
---
apiVersion: v1
kind: Service
metadata:
  name: pma-service
spec:
  selector:
    app: phpmyadmin
  ports:
  - port: 80
    targetPort: 80





# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: phpmyadmin
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: phpmyadmin
#   template:
#     metadata:
#       labels:
#         app: phpmyadmin
#     spec:
#       containers:
#       - name: phpmyadmin
#         image: phpmyadmin:latest
#         ports:
#         - containerPort: 80 
#         env:
#         - name: PMA_PORT
#           value: "3306"
#         - name: PMA_ARBITRARY
#           value: "1"
#         - name: PMA_HOST
#           value: mysql-service

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: pma-service
# spec:
#   selector:
#     app: phpmyadmin
#   ports:
#   - port: 80
#     protocol: TCP
#     targetPort: 80
#     nodePort: 30082
#   type: NodePort
