bloggin/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    name: myingress
spec:
  rules:
  - host: bloggin.kloudninja.online 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bloggin-service
            port:
              number: 80
  - host: phpmyadmin.kloudninja.online 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pma-service
            port:
              number: 80

  - host: promethheus.kloudninja.online 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-server
            port:
              number: 80  

  - host: grafana.kloudninja.online 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-grafana
            port:
              number: 80                       

  tls:
      - hosts:
          - bloggin.kloudninja.online 
          - phpmyadmin.kloudninja.online
          - promethheus.kloudninja.online
          - grafana.kloudninja.online
        secretName: tls-2048-bloggin
